# affine_transform_nd

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.rst  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: deploy.yml  deploy_test.yml  test-package-windows.yml  test-package.yml
affine_transform/: __init__.py  _version.py  affine_transform.py
benchmarks/: _benchmark_misc.py  benchmark.py
docs/: conf.py  cpp_doc.rst  how_to_use.rst  index.rst  module_doc.rst  requirements.txt
docs/cpp/: Doxyfile
docs/cpp_docs/: affine_transform.rst  apply_interpolation.rst  constant_boundary.rst  cubic_interpolation.rst  data_struct.rst  extract.rst  interpolation.rst  linear_interpolation.rst  python_bindings.rst  transform.rst  transform_loop.rst
examples/: rotation_and_translation.py
include/affine_transform/: affine_transform.hpp  interpolation.hpp
src/: main.cpp
tests/: test_affine_transform.py
