[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2", "cmake>=3.15"]
build-backend = "setuptools.build_meta"

[project]
name = "affine_transform"
dynamic = ["version"]
description = "Easy to use multi-core affine transformations"
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "NOhs, TobelRunner"}
]

[tool.setuptools_scm]
write_to = "affine_transform/version.txt"